# PACA

./: .gitignore  CMakeLists.txt  OVERVIEW.md  README.md  ROADMAP.md
examples/: simple_use.cpp
include/cli/: cli.hpp  exceptions.hpp  option.hpp  parser.hpp  value.hpp
include/cli/detail/: convert_impl.hpp  parser_impl.hpp
tests/: test_convert_impl.cpp  test_exceptions.cpp  test_option.cpp  test_parser.cpp  test_value.cpp
